# ewc-backend

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  README.md  pyproject.toml
app/: config.py  logging.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  capabilities.py  dns.py  hub.py  jobs.py  keypairs.py  profiles.py  s3.py  servers.py
app/clients/: interfaces.py  stubs.py
app/jobs/: engine.py
app/models/: auth.py  common.py  dns.py  hub.py  job.py  keypair.py  profile.py  s3.py  server.py
app/services/: auth_service.py  dns_service.py  exceptions.py  hub_service.py  keypair_service.py  s3_service.py  server_service.py
docs/: ADR-001-target-architecture.md  README.md  auth-authorization-model.md  index.html  job-execution-model.md  openapi.yaml
tests/: conftest.py  test_api.py  test_auth.py  test_capabilities.py  test_containerfile.py  test_dns.py  test_health.py  test_hub.py  test_jobs.py  test_keypairs.py  test_no_click.py  test_profiles.py  test_s3.py  test_servers.py
